# Communication-Analysis-Toolkit

./: .dockerignore  .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_PRIVACY.md  Dockerfile  LICENSE  README.md  SECURITY_HARDENING.md  demo.py  docker-compose.override.yml  docker-compose.yml  fix-email.sh  mypy_final_report.txt  mypy_report.txt  pyproject.toml  requirements.txt
.cursor/rules/: project-guide.mdc
.github/workflows/: ci.yml
active/: README.md  extract_signal_messages.py  generate_monthly_reports.py  parse_manual_messages.py  signal_desktop_extractor.py
api/: __init__.py  agent.py  auth.py  config.py  data.py  dependencies.py  errors.py  exceptions.py  main.py  middleware.py  retriever.py  schemas.py  services.py  utils.py
api/routers/: cases.py  chat.py  health.py  ingestion.py  messages.py  upload.py
cases/: README.md
cases/flow-test-case-1/: config.json
cases/flow-test-case-2/: config.json
cases/flow-test-case-3/: config.json
cases/sample/: config.json
ci_test_env/: pyvenv.cfg
ci_test_env/Scripts/: activate  activate.bat
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css  types.ts
dashboard/src/components/: StatCard.css  StatCard.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Evidence.tsx  Overview.tsx  Patterns.tsx  Timeline.tsx
docs/: audit_report_google_cto.md  benchmarks.md  quick_start.md  summary.md  tech_stack.md  tutorial.md
docs/adr/: 001-agentic-rag-architecture.md  002-error-handling-observability.md
docs/design/: 003-data-layer-schema.md
engine/: __init__.py  analyzer.py  cli.py  config.py  crypto.py  db.py  ingestion.py  llm.py  logger.py  patterns.py  patterns_supportive.py  relationship_health.py  reporting.py  schema.sql  storage.py  tasks.py  types.py
static/: case.html  index.html
tests/: debug_dates.py  locustfile.py  test_agent_questions.py  test_ai_connection.py  test_analyzer.py  test_api.py  test_async_integration.py  test_bidirectional_analysis.py  test_caching.py  test_context_filters.py  test_crypto_flow.py  test_data_layer.py  test_database.py  test_dates.py  test_db_wal.py  test_deletion.py  test_edge_cases.py  test_flow.py  test_fuzz.py  test_golden.py  test_hurtful_language.py  test_integration.py  test_logging.py  test_malformed_data.py  test_observability.py  test_parsers.py  test_patterns.py  test_patterns_coercive_control.py  test_patterns_darvo.py  test_patterns_gaslighting.py  test_patterns_gottman.py  test_patterns_manipulation.py  test_rate_limit_manual.py  test_supportive_patterns.py  test_text_paste.py  test_tracing.py  test_upload.py
tests/fixtures/: sample_messages.json  test_config.json
tools/: debug_xml.py  decrypt_signal_key.py  deep_signal_check.py  deep_signal_check2.py  explore_db.py  explore_signal.py  explore_sms.py  extract_desktop_messages.py  extract_signal_desktop.py  generate_sample_data.py  read_signal_desktop.py  redact_number.py
