[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comms-toolkit"
version = "3.1.0"
description = "A research-informed analysis engine for text-based communication."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "nlp",
    "communication",
    "behavioral-analysis",
    "pattern-detection",
    "text-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# --------------------------------------------------------------------------
# Core dependencies — kept minimal for the analysis engine
# --------------------------------------------------------------------------
dependencies = [
    "defusedxml>=0.7.1",
    "structlog>=24.1.0",
    "colorama>=0.4.6",  # For Windows terminal colors
]

# --------------------------------------------------------------------------
# Optional dependency groups — install with: pip install comms-toolkit[dev]
# --------------------------------------------------------------------------
[project.optional-dependencies]
# For local development: pip install -e ".[dev]"
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]
# For Signal message extraction: pip install comms-toolkit[signal]
signal = [
    "pycryptodome>=3.19.0",
    # pysqlcipher3 requires C compiler + sqlcipher headers — install manually
]
# For API dashboard: pip install comms-toolkit[api]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
# For future ML features: pip install comms-toolkit[ml]
ml = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
]

# --------------------------------------------------------------------------
# CLI entry point — after install, user can run: comms-analyze --help
# --------------------------------------------------------------------------
[project.scripts]
comms-analyze = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/beautifulplanet/Communication-Analysis-Toolkit"
Documentation = "https://github.com/beautifulplanet/Communication-Analysis-Toolkit#readme"
Repository = "https://github.com/beautifulplanet/Communication-Analysis-Toolkit"
Issues = "https://github.com/beautifulplanet/Communication-Analysis-Toolkit/issues"

# --------------------------------------------------------------------------
# Setuptools — tell it where to find our packages
# --------------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["engine*", "api*", "active*"]
exclude = ["tests*", "old_unused*", "build_tools*", "tools*"]

# --------------------------------------------------------------------------
# Ruff — fast Python linter + formatter (replaces flake8, isort, black)
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py39"
exclude = ["tools", "active", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize syntax)
    "B",   # bugbear
    "SIM", # simplify
    "PT",  # pytest-style
    "A",   # builtins
    "PIE", # misc
    "RET", # return
    "SLF", # self
    "RUF", # ruff specific
]
ignore = [
    "E501",  # line too long — we handle this with line-length setting
]

[tool.ruff.lint.isort]
known-first-party = ["engine"]

# --------------------------------------------------------------------------
# Pytest — test runner configuration
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "strict"
pythonpath = ["."]

# --------------------------------------------------------------------------
# Mypy — static type checking
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # start permissive, tighten later
ignore_missing_imports = true
